--- a/Информация-о-сборках.html
+++ b/Информация-о-сборках.html
@@ -118,7 +118,7 @@
         <h2 class="u-align-center u-text u-text-1">Тут можно выбрать, какую информацию вы хотите посмотреть<br>о сборках от Аддерли!
         </h2>
         <a href="Содержимое-сборок.html" data-page-id="2673806549" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-1">Содержимое сборок</a>
-        <a href="Длительность-установки-сборок.html" data-page-id="2739421494" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-2">Длительности установок сборок</a>
+        <a href="Длительность-установки-сборок.html" data-page-id="2739421494" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-2">Длительность установок сборок</a>
       </div>
     </section>
     
