--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -115,9 +115,9 @@
       </div></header>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-image u-section-1" id="sec-0039" data-image-width="1920" data-image-height="1200">
       <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
-        <h1 class="u-text u-text-default u-text-1">Сборки Windows 8.0<br>
+        <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 8.0<br>
         </h1>
-        <h6 class="u-text u-text-default u-text-2">Windows 8.0 by Adderly (23.06.2022)<br>
+        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 8.0 by Adderly (23.06.2022)<br>
         </h6>
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows10x64-2022-06-23-19-19-38.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows10x64-2022-06-23-19-21-17.png" alt="" data-image-width="1366" data-image-height="768">
@@ -125,7 +125,7 @@
         <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows10x64-2022-06-23-19-20-02.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows10x64-2022-06-23-19-19-47.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows10x64-2022-06-23-19-22-40.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xs u-text u-text-default u-text-3"> Сборка обновлена до последних обновлений, актуальных на Июнь 2022 года.<br>(Последние 30 обновлений можно установить по желанию)<br>
+        <p class="u-align-left-lg u-align-left-md u-align-left-sm u-align-left-xs u-text u-text-default u-text-white u-text-3"> Сборка обновлена до последних обновлений, актуальных на Июнь 2022 года.<br>(Последние 30 обновлений можно установить по желанию)<br>
           <br>Добавлена папка KMS <br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных программ <br>
           <br>Интегрирован Framework 4.6<br>
@@ -140,7 +140,7 @@
         </p>
         <a href="https://drive.google.com/file/d/1Z6vhjx2qBIkjqvnyAyKs1BJYzWfmdr1_/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-hover-custom-color-15 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.0 by Adderly</a>
         <a href="https://www.mediafire.com/file/cuh34ijtc2se6iz/Windows+8.0+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank">Альтернативная ссылка</a>
-        <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
+        <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 10</a>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 7</a>
@@ -151,6 +151,9 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2021 - 2022
         </p>
-      </div></footer>
+      </div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 20px; bottom: 20px; padding: 10px; background-image: none; box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);" class="u-back-to-top u-custom-color-11 u-icon u-icon-circle u-opacity u-opacity-75" data-href="#">
+        <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
+        <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
+    </span>
   </body>
 </html>
