--- a/Windows-Lite-сборки.html
+++ b/Windows-Lite-сборки.html
@@ -114,7 +114,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-grey-90 u-section-1" id="sec-1120">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-1">Сборки Windows Lite<br>
         </h1>
         <h6 class="u-align-center-xs u-text u-text-default u-text-2">Windows 10 Lite 1709 by Adderly (22.06.2022)</h6>
@@ -136,7 +136,7 @@
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-2">Сборки Windows 10</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 8.0</a>
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 7</a>
-        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Windows Lite x32</a>
+        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows Lite x32</a>
       </div>
     </section>
     
@@ -144,6 +144,9 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-70 u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2021 - 2022
         </p>
-      </div></footer>
+      </div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; right: 20px; bottom: 20px; padding: 10px; background-image: none; box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);" class="u-back-to-top u-custom-color-11 u-icon u-icon-circle u-opacity u-opacity-75" data-href="#">
+        <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
+        <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
+    </span>
   </body>
 </html>
