--- a/404.html
+++ b/404.html
@@ -113,10 +113,10 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-b892">
+    <section class="u-align-center u-clearfix u-image u-section-1" id="sec-b892" data-image-width="512" data-image-height="512">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-default u-text-1">Страница не найдена!</h1>
-        <p class="u-text u-text-default u-text-2">Страницы нет, либо она еще в разработке.<br>На данный момент страниц мало, так как сайт открылся совсем недавно.<br>Но вот что мы рекомендуем сейчас:
+        <h1 class="u-text u-text-default u-text-white u-text-1">Страница не найдена!</h1>
+        <p class="u-text u-text-default u-text-white u-text-2">Страницы нет, либо она еще в разработке.<br>
         </p>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-1">Сборки Windows 8.1</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-2">Сборки Windows 8.0</a>
