--- a/FineWork.html
+++ b/FineWork.html
@@ -113,9 +113,9 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-0c3c">
+    <section class="u-align-center u-clearfix u-image u-section-1" id="sec-0c3c" data-image-width="512" data-image-height="512">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h4 class="u-text u-text-1">В начале марта 2022, я придумал псевдоним для своих программ - FineWork.<br>А теперь, это дуэт, в котором мы с другом<br>создаем и улучшаем свои программы.<br>Мы так же имеем сайт.
+        <h4 class="u-text u-text-white u-text-1">В начале марта 2022, я придумал псевдоним для своих программ - FineWork.<br>А теперь, это дуэт, в котором мы с другом<br>создаем и улучшаем свои программы.<br>Мы так же имеем сайт.
         </h4>
         <a href="https://finework.tk/" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">FineWork.TK</a>
         <a href="https://finework.tk/FineWork-Type-PRO.html" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-2">FineWork Type PRO</a>
