--- a/Скачать-Старые-Windows.html
+++ b/Скачать-Старые-Windows.html
@@ -113,19 +113,19 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center-sm u-align-center-xs u-clearfix u-grey-90 u-section-1" id="sec-cb1b">
+    <section class="u-align-center u-clearfix u-image u-section-1" id="sec-cb1b" data-image-width="512" data-image-height="512">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-default u-text-1">Скачать старые Windows</h1>
-        <h1 class="u-text u-text-default u-text-2">Google Disk</h1>
-        <a href="https://drive.google.com/file/d/1_1mZyTvBIoVrkdUpMIpWw1oc1UKy_GjS/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Windows 3.11 (Google Disk)</a>
-        <a href="https://drive.google.com/file/d/1Xh3MznX0L_4hLT2N1EbohdpHmG7JBJHN/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-2" target="_blank">Windows 95 (Google Disk)</a>
-        <a href="https://drive.google.com/file/d/16suERWqPlyHnuYH0A8qQ58qERsgxYazq/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-3" target="_blank">Windows NT 4.0 (Google Disk)</a>
-        <a href="https://drive.google.com/file/d/1Z4LRNY4uXoR2clKlcz96TxaNE6Vc8S97/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-4" target="_blank">Windows 98 [Second Edition] (Google Disk)</a>
-        <a href="https://drive.google.com/file/d/1OMcQXUBR7IPZjNmQtohhfDCV7qH3WGYb/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-5" target="_blank">Windows 2000 [SP4] (Google Disk)</a>
-        <a href="https://drive.google.com/file/d/1atVVYvwdKNSR_clkTIWKGlKsiqdtqaa2/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-6" target="_blank">Windows ME (Google Disk)</a>
-        <a href="https://drive.google.com/file/d/1KExuUajTSoeLyXjRgqy3ag7SOCVRlDon/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-7" target="_blank">Windows XP SP3 (Google Disk)</a>
-        <a href="https://drive.google.com/file/d/1FSAStnqJS-7ocAOk0SFSejt1VoyYo-5j/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-8" target="_blank">Windows Vista (Google Disk)</a>
-        <h1 class="u-text u-text-default u-text-3">MediaFire</h1>
+        <h1 class="u-text u-text-default u-text-white u-text-1">Скачать старые Windows</h1>
+        <h1 class="u-text u-text-default u-text-white u-text-2">Google Drive</h1>
+        <a href="https://drive.google.com/file/d/1_1mZyTvBIoVrkdUpMIpWw1oc1UKy_GjS/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Windows 3.11 (Google ​Drive)</a>
+        <a href="https://drive.google.com/file/d/1Xh3MznX0L_4hLT2N1EbohdpHmG7JBJHN/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-2" target="_blank">Windows 95 (Google ​Drive)</a>
+        <a href="https://drive.google.com/file/d/16suERWqPlyHnuYH0A8qQ58qERsgxYazq/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-3" target="_blank">Windows NT 4.0 (Google ​Drive)</a>
+        <a href="https://drive.google.com/file/d/1Z4LRNY4uXoR2clKlcz96TxaNE6Vc8S97/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-4" target="_blank">Windows 98 [Second Edition] (Google ​Drive)</a>
+        <a href="https://drive.google.com/file/d/1OMcQXUBR7IPZjNmQtohhfDCV7qH3WGYb/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-5" target="_blank">Windows 2000 [SP4] (Google ​Drive)</a>
+        <a href="https://drive.google.com/file/d/1atVVYvwdKNSR_clkTIWKGlKsiqdtqaa2/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-6" target="_blank">Windows ME (Google ​Drive)</a>
+        <a href="https://drive.google.com/file/d/1KExuUajTSoeLyXjRgqy3ag7SOCVRlDon/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-7" target="_blank">Windows XP SP3 (Google ​Drive)</a>
+        <a href="https://drive.google.com/file/d/1FSAStnqJS-7ocAOk0SFSejt1VoyYo-5j/view?usp=sharing" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-8" target="_blank">Windows Vista (Google ​Drive)</a>
+        <h1 class="u-text u-text-default u-text-white u-text-3">MediaFire</h1>
         <a href="https://www.mediafire.com/file/kfbq1o20wkxm27o/1Windows+3.11.iso/file" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-9" target="_blank">Windows 3.11 (​MediaFire)</a>
         <a href="https://www.mediafire.com/file/56jrc0h5feaobwv/2Windows+95.iso/file" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-10" target="_blank">Windows 95 (​MediaFire)</a>
         <a href="https://www.mediafire.com/file/exkqyyzwd4vgh45/3Windows+NT+4.0.iso/file" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-11" target="_blank">Windows NT 4.0 (​MediaFire)</a>
@@ -134,6 +134,11 @@
         <a href="https://www.mediafire.com/file/vrjmrbg05jw3ol9/6Windows+ME.iso/file" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-14" target="_blank">Windows ME (​MediaFire)</a>
         <a href="https://www.mediafire.com/file/3m36synjtotmz3n/7Windows+XP+SP3.iso/file" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-15" target="_blank">Windows XP SP3 (​MediaFire)</a>
         <a href="https://www.mediafire.com/file/oulwi480hzpe3u3/8Windows+Vista.iso/file" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-16" target="_blank">Windows Vista (​MediaFire)</a>
+        <a href="https://www.mediafire.com/file/g1mydxpkno1whj5/Dos4.01.img/file" class="u-active-custom-color-5 u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-17" target="_blank">MS DOS 6.22 (​MediaFire)</a>
+        <a href="https://www.mediafire.com/file/oulwi480hzpe3u3/8Windows+Vista.iso/file" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-18" target="_blank">MS DOS 4 (​MediaFire)</a>
+        <h1 class="u-text u-text-default u-text-white u-text-4">EaseUS Partition Master<br>ISO Образ
+        </h1>
+        <a href="https://www.mediafire.com/file/imqhth3gs8ajdhb/partition.iso/file" class="u-active-custom-color-5 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-19" target="_blank">MediaFire</a>
       </div>
     </section>
     
