--- a/Содержимое-сборок.html
+++ b/Содержимое-сборок.html
@@ -113,24 +113,24 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-grey-80 u-section-1" id="sec-3b98">
+    <section class="u-clearfix u-image u-section-1" id="sec-3b98" data-image-width="512" data-image-height="512">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-round u-radius-33 u-image-1" src="images/2022-06-22180219.png" alt="" data-image-width="312" data-image-height="257">
-        <p class="u-align-center u-text u-text-default u-text-1">Единственная папка на рабочем столе в моих сборках. "от Марка Аддерли"<br>В которой находится активатор, батники чтобы управлять обновлениями,<br>Обои только из разных версий Windows (Vista, 7, 8.0, 8.1, 10, 11)<br>ТОЛЬКО инсталяторы программ, типа Chrome, EasyBCD, и др.<br>Инсталяторы программ созданных мною, а так же курсоры и ярлычки.
+        <p class="u-align-center u-text u-text-default u-text-white u-text-1">Единственная папка на рабочем столе в моих сборках. "от Марка Аддерли"<br>В которой находится активатор, батники чтобы управлять обновлениями,<br>Обои только из разных версий Windows (Vista, 7, 8.0, 8.1, 10, 11)<br>ТОЛЬКО инсталяторы программ, типа Chrome, EasyBCD, и др.<br>Инсталяторы программ созданных мною, а так же курсоры и ярлычки.
         </p>
         <img class="u-image u-image-round u-radius-31 u-image-2" src="images/2022-06-22180311.png" alt="" data-image-width="273" data-image-height="218">
-        <p class="u-align-center u-text u-text-default u-text-2">Все программы находятся в папках по категории,<br>в каждой папке по максимум 5 инсталяторов.<br>В папках только самое нужное после установки.
+        <p class="u-align-center u-text u-text-default u-text-white u-text-2">Все программы находятся в папках по категории,<br>в каждой папке по максимум 5 инсталяторов.<br>В папках только самое нужное после установки.
         </p>
-        <p class="u-text u-text-default-lg u-text-default-xl u-text-3">Подробное содержание</p>
+        <p class="u-text u-text-default-lg u-text-default-xl u-text-white u-text-3">Подробное содержание</p>
         <img class="u-image u-image-round u-radius-50 u-image-3" src="images/2022-06-23003815.png" alt="" data-image-width="314" data-image-height="250">
-        <p class="u-text u-text-default u-text-4">Как и говорилось, это папки из единственной папки "от Марка Аддерли"</p>
-        <p class="u-text u-text-default-lg u-text-default-xl u-text-5">И что в них находится:</p>
+        <p class="u-text u-text-default u-text-white u-text-4">Как и говорилось, это папки из единственной папки "от Марка Аддерли"</p>
+        <p class="u-text u-text-default-lg u-text-default-xl u-text-white u-text-5">И что в них находится:</p>
         <img class="u-expanded-width-xs u-image u-image-default u-image-4" src="images/2022-06-23003844.png" alt="" data-image-width="272" data-image-height="125">
-        <p class="u-text u-text-default-lg u-text-default-xl u-text-6">Это чтобы убрать стрелки которые нарисованы на ярлыках рабочего стола.</p>
-        <p class="u-text u-text-default u-text-7">1 набор курсоров в стиле Windows 11, инсталяторы моих программ.</p>
+        <p class="u-text u-text-default-lg u-text-default-xl u-text-white u-text-6">Это чтобы убрать стрелки которые нарисованы на ярлыках рабочего стола.</p>
+        <p class="u-text u-text-default u-text-white u-text-7">1 набор курсоров в стиле Windows 11, инсталяторы моих программ.</p>
         <img class="u-expanded-width-xs u-image u-image-default u-image-5" src="images/2022-06-23003857.png" alt="" data-image-width="263" data-image-height="535">
         <img class="u-expanded-width-xs u-image u-image-default u-image-6" src="images/2022-06-23003930.png" alt="" data-image-width="259" data-image-height="533">
-        <p class="u-text u-text-default u-text-8">Ну и инсталяторы программ:</p>
+        <p class="u-text u-text-default u-text-white u-text-8">Ну и инсталяторы программ:</p>
         <img class="u-expanded-width-xs u-image u-image-default u-image-7" src="images/2022-06-23003944.png" alt="" data-image-width="259" data-image-height="223">
         <img class="u-image u-image-default u-image-8" src="images/2022-06-23004010.png" alt="" data-image-width="302" data-image-height="80">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-9" src="images/2022-06-23004034.png" alt="" data-image-width="567" data-image-height="60">
