--- a/Софт-от-Аддерли.html
+++ b/Софт-от-Аддерли.html
@@ -113,9 +113,9 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-grey-90 u-section-1" id="sec-52ed">
+    <section class="u-align-center u-clearfix u-image u-section-1" id="sec-52ed" data-image-width="512" data-image-height="512">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h4 class="u-align-center-xl u-text u-text-1">Зачастую скачивание софта является проблемой в наше время, особенно Pro версий программ.<br>Либо сложно найти, либо где то могут быть вирусы, поэтому я решил с вами поделиться!&nbsp;
+        <h4 class="u-text u-text-white u-text-1">Зачастую скачивание софта является проблемой в наше время,<br>особенно Pro версий программ.<br>Либо сложно найти, либо где то могут быть вирусы, поэтому я решил с вами поделиться!&nbsp;
         </h4>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/soft/2015-2022%2086.exe" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-1">Microsoft Visual C++ Redistributable<br>2015 - 2022 x32
         </a>
@@ -137,8 +137,16 @@
         <a href="https://drive.google.com/file/d/1K9HdKh53d7GRXdCVv0xufj3gZQK6g0Sv/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-16">EaseUS Partition Master Unlimited</a>
         <a href="https://drive.google.com/file/d/1bk30x-_BZcn14YMHMa184DD3hXs3sYm8/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-17">uTorrent Pro и&nbsp;UltraISO Premium</a>
         <a href="https://drive.google.com/file/d/1WE7UQCKkDAAskluf59fvCwABEZMUaodO/view?usp=sharing" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-18">Visual Studio 2022</a>
-        <h2 class="u-align-center-xl u-text u-text-2">Пароль на архивы - 1111</h2>
-        <h5 class="u-align-center-xl u-text u-text-3">Все что здесь на странице, находится так же в открытом доступе в Интернете.<br>Автор этих репаков, не автор сайта!
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/Grand-Theft-Auto-San-Andreas-by-Igruha.torrent" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-19">GTA San Andreas</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/Grand-Theft-Auto-Vice-City-by-Igruha.torrent" class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-20">GTA Vice Sity</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/Grand-Theft-Auto-5-by-Igruha.torrent" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-21">GTA 5</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/Watch-Dogs-1.06.329-16-DLC-RePack-ot-xatab.torrent" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-22">Watch Dogs 1</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/need_for_speed_most_wanted.torrent" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-23">Need For Spped - Most Wanted</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/Geometry_Dash_v2.112.torrent" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-24">Geometry Dash 2.1.2112</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/counter-strike-condition-zero-deleted-scenes.torrent" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-25">Counter Strike Condition Zero Deleted Scenes</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/CSS.exe.torrent" class="u-border-none u-btn u-button-style u-grey-70 u-hover-grey-50 u-btn-26" target="_blank">Counter Strike Sourse V92</a>
+        <h2 class="u-text u-text-white u-text-2">Пароль на архивы - 1111</h2>
+        <h5 class="u-align-center-md u-text u-text-white u-text-3">Все что здесь на странице, находится так же в открытом доступе в Интернете.<br>Автор этих репаков, не автор сайта!
         </h5>
       </div>
     </section>
