--- a/Windows-8-1-сборки.html
+++ b/Windows-8-1-сборки.html
@@ -114,7 +114,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-image u-section-1" id="sec-b057" data-image-width="3840" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 8.1</h1>
         <h6 class="u-align-center-xs u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-2">Windows 8.1 V4 by Adderly (27.06.2022)<br>
         </h6>
