--- a/Windows-Lite-x32-сборки.html
+++ b/Windows-Lite-x32-сборки.html
@@ -113,18 +113,18 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-grey-90 u-section-1" id="sec-2ecd">
+    <section class="u-clearfix u-image u-section-1" id="sec-2ecd" data-image-width="512" data-image-height="512">
       <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-1">Сборки Windows Lite (32 битные)<br>
+        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-white u-text-1">Сборки Windows Lite (32 битные)<br>
         </h1>
-        <h6 class="u-align-center-xs u-text u-text-default u-text-2">Windows 8.1 Lite x86 by Adderly (26.06.2022)</h6>
+        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 8.1 Lite x86 by Adderly (26.06.2022)</h6>
         <img class="u-expanded-width-xs u-image u-image-default u-image-1" src="images/Windows8.x-2022-06-26-23-17-13.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows8.x-2022-06-26-23-18-14.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-xs u-image u-image-default u-image-3" src="images/Windows8.x-2022-06-26-23-21-41.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-xs u-image u-image-default u-image-4" src="images/Windows8.x-2022-06-26-23-19-05.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-xs u-image u-image-default u-image-5" src="images/Windows8.x-2022-06-26-23-18-29.png" alt="" data-image-width="465" data-image-height="256">
         <img class="u-expanded-width-xs u-image u-image-default u-image-6" src="images/Windows8.x-2022-06-26-23-17-241.png" alt="" data-image-width="445" data-image-height="240">
-        <p class="u-text u-text-default u-text-3"> Добавлена папка "от Марка Аддерли", в которой находится инсталятор Google Chrome, и некоторые другие папки.<br>
+        <p class="u-text u-text-default u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находится инсталятор Google Chrome, и некоторые другие папки.<br>
           <br>Удалены приложения<br>"Финансы, Еда и напитки, Здоровье и фитнесс, Карты, Новости,<br>Спорт, Путешествия, Погода, Помощь и подсказки, Ридер, Скайп, Будильник,<br>Запись звука, Xbox Live Games, Zune, Сканер, Почта, Люди, XBOX Live Games, UWP Калькулятор"&nbsp;<br>
           <br>Интегрированы Microsoft Visual C++ Redistributable 2005, 2008, 2010, 2012, 2013 x86<br>
           <br>Включен DirectPLay<br>&nbsp;<br>Отключен Internet Explorer<br>Отключен Media Player<br>(по желанию можно вернуть)<br>
@@ -135,7 +135,7 @@
         </p>
         <a href="https://www.mediafire.com/file/0ynqo6eppqv0sxw/Windows+8.1+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-1" target="_blank">Альтернативная ссылка</a>
         <a href="https://drive.google.com/file/d/1owQwO251ocPBcWqpA05mkpB4g39rp7Nk/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 8.1 Lite by Adderly</a>
-        <p class="u-text u-text-default u-text-4">Смотрите так же:</p>
+        <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
         <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows Lite</a>
       </div>
     </section>
