--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -117,7 +117,7 @@
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 10<br>
         </h1>
-        <h6 class="u-align-center-xs u-text u-text-default u-text-white u-text-2">Windows 10 21H2 V2 by Adderly (28.06.2022)<br>
+        <h6 class="u-align-center-xs u-text u-text-default u-text-white u-text-2">Windows 10 21H2 by Adderly (23.06.2022)<br>
         </h6>
         <img class="u-image u-image-default u-image-1" src="images/photo_2022-06-21_21-47-422.jpg" alt="" data-image-width="1280" data-image-height="719">
         <img class="u-image u-image-default u-image-2" src="images/photo_2022-06-21_21-47-42.jpg" alt="" data-image-width="1280" data-image-height="719">
