--- a/Как-обойти-проверку-Windows-11.html
+++ b/Как-обойти-проверку-Windows-11.html
@@ -123,7 +123,7 @@
         </p>
         <p class="u-text u-text-white u-text-6">Переходим по пути HK_LM\SYSTEM\Setup, и справа создаем в Setup раздел "LabConfig", и создаем там параметры DWORD:</p>
         <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/594.png" alt="" data-image-width="1366" data-image-height="768">
-        <p class="u-align-center-xl u-text u-text-7">После всех действий, у вас должно выйти лицензионное соглашение. Работает такой трюк на версиях до 22000.194<br>Windows 11 by Adderly основана на 22000.132, и там проверки нет изначально, но возможно потребуются эти действия.
+        <p class="u-align-center-xl u-text u-text-white u-text-7">После всех действий, у вас должно выйти лицензионное соглашение. Работает такой трюк на версиях до 22000.194<br>Windows 11 by Adderly основана на 22000.132, и там проверки нет изначально, но возможно потребуются эти действия.
         </p>
         <img class="u-image u-image-default u-preserve-proportions u-image-5" src="images/595.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-default u-text-white u-text-8">Смотрите так же:</p>
