--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -112,7 +112,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-795a" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 10<br>
         </h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 10 21H2 by Adderly (21.06.2022)<br>
@@ -129,7 +129,8 @@
           <br>Отключён Windows Media Player <br>Отключён Internet Explorer <br>(по желанию можно вернуть) <br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
           <br>Образ весит 5.96 GB, после установки Windows занимает 11 GB (стандартная 21H2 занимает 24 GB) <br>
-          <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)
+          <br>Образ основан на официальном MSDN Windows 10 21H2 (19044.1288)<br>
+          <br>Обязательно ставить с интернетом!<br>
         </p>
         <a href="https://drive.google.com/file/d/1xqrIeZ1BzITOFxtdxBmIS3BUKYaiiAe8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 21H2 by Adderly</a>
         <h6 class="u-text u-text-default u-text-white u-text-4">Windows 10 1607 by Adderly (22.06.2022)</h6>
@@ -155,9 +156,9 @@
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 7</a>
       </div>
     </section>
-    <section class="u-clearfix u-hidden-lg u-hidden-xl u-image u-section-2" id="sec-47ae" data-image-width="597" data-image-height="137">
+    <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-47ae">
       <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-white u-text-1">К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1">К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
       </div>
     </section>
     
