--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -112,7 +112,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-782f" data-image-width="1920" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 7</h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 V3 by Adderly (25.06.2022)<br>
         </h6>
@@ -136,15 +136,33 @@
         </p>
         <a href="https://drive.google.com/file/d/1JNkPowcstxkiC98wLjuzKDUQpeZQzFM3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 V3 by Adderly</a>
         <a href="http://www.mediafire.com/file/6dpnjoyyz5nhuau/Windows_7_V3_by_Adderly.iso" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hover-black u-radius-50 u-btn-2" target="_blank">Альтернативная ссылка</a>
-        <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 8.1</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.0</a>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 10</a>
+        <h6 class="u-text u-text-default u-text-white u-text-4">Windows 7 V3.1 by Adderly (27.07.2022)<br>
+        </h6>
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows7x64-2022-07-27-01-29-34.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-8" src="images/Windows7x64-2022-07-27-01-22-30.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-image u-image-default u-preserve-proportions u-image-9" src="images/Windows7x64-2022-07-27-01-26-11.png" alt="" data-image-width="544" data-image-height="314">
+        <p class="u-align-center u-text u-text-white u-text-5"> Обновления на 2011 год. (Service Pack 1) <br>
+          <br>Добавлен активатор.<br>
+          <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ <br>
+          <br>Интегрированы Framework 4.8<br>
+          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64&nbsp;<br>
+          <br>Добавлены темы с обоями Windows Vista, 11, 8.0<br>
+          <br>Отключены игры <br>Отключён Internet Explorer <br>Отключены компоненты для работы с мультимедиа "Media Center, Media Player"&nbsp;<br>Отключены компоненты планшетного пк<br>Отключены гаджеты <br>(по желанию можно вернуть) <br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
+          <br>Образ весит 4.33 GB (столько же сколько и 3.0), после установки Windows занимает 14.5 GB. <br>
+          <br>Образ основан на официальном MSDN Windows 7.<br>
+          <br>Немного изменено содержимое папок "Браузеры, плееры, и архиваторы"<br>В отличии от 3.0, нет никаких тем.
+        </p>
+        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-13 u-radius-50 u-btn-3" target="_blank">Скачать Windows 7 V3.1 by Adderly</a>
+        <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.0</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 10</a>
       </div>
     </section>
-    <section class="u-clearfix u-hidden-lg u-hidden-xl u-image u-section-2" id="sec-17f1" data-image-width="597" data-image-height="137">
+    <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-17f1">
       <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-white u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
       </div>
     </section>
     
