--- a/Windows-8-1-сборки.html
+++ b/Windows-8-1-сборки.html
@@ -112,7 +112,7 @@
         </nav>
       </div></header>
     <section class="u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-b057" data-image-width="3840" data-image-height="1200">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-body-alt-color u-text-default u-text-1">Сборки Windows 8.1</h1>
         <h6 class="u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2">Windows 8.1 V4 by Adderly (27.06.2022)<br>
         </h6>
@@ -144,9 +144,9 @@
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 7</a>
       </div>
     </section>
-    <section class="u-clearfix u-hidden-lg u-hidden-xl u-image u-section-2" id="sec-57a1" data-image-width="597" data-image-height="137">
+    <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-57a1">
       <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-white u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
       </div>
     </section>
     
