--- a/Windows-Lite-сборки.html
+++ b/Windows-Lite-сборки.html
@@ -127,7 +127,7 @@
           <br>Образ весит 4 GB, после установки Windows занимает 8.38 GB <br>
           <br>Образ основан на официальном MSDN Windows 10 1709 (Fall Creators Update)<br>
           <br>В этой сборке нет инсталяторов программ, и обоев.<br>
-          <br>Проверена на слабом ПК, отлично оптимизирована.
+          <br>Проверена на слабом ПК, отлично оптимизирована.<br>Обязательно ставить с интернетом!<br>
         </p>
         <a href="https://drive.google.com/file/d/1HAlkL0G0b92L0XEAlYZCocXKUHRMaYD0/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 1709 by Adderly</a>
         <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
@@ -137,9 +137,9 @@
         <a href="Windows-Lite-x32-Сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Windows Lite x32</a>
       </div>
     </section>
-    <section class="u-clearfix u-hidden-lg u-hidden-xl u-image u-section-2" id="sec-b8b3" data-image-width="597" data-image-height="137">
-      <div class="u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-body-alt-color u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+    <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-b8b3">
+      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
       </div>
     </section>
     
