--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -111,8 +111,8 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-2e85" data-image-width="3840" data-image-height="2400">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+    <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-hidden-md u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-2e85" data-image-width="3840" data-image-height="2400">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <h1 class="u-text u-text-default u-text-white u-text-1">Сборки Windows 11<br>
         </h1>
         <h6 class="u-align-center-xs u-text u-text-default u-text-white u-text-2">Windows 11 V2 21H2 by Adderly (25.06.2022)<br>
@@ -121,26 +121,27 @@
         <img class="u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows10x64-2022-06-25-14-32-48.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows10x64-2022-06-25-14-32-37.png" alt="" data-image-width="627" data-image-height="328">
         <img class="u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows10x64-2022-06-25-14-32-11.png" alt="" data-image-width="923" data-image-height="527">
-        <p class="u-align-center u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото и&nbsp;чтобы отключать и включать обновления.&nbsp;<br>
+        <p class="u-align-center-xl u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото и&nbsp;чтобы отключать и включать обновления.&nbsp;<br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
           <br>Включён DirectPlay <br>
           <br>Отключён Windows Media Player <br>(по желанию можно вернуть) <br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно выключить)<br>
           <br>Образ весит 5.96 GB, после установки Windows занимает 21 GB (оригинальная версия занимает 20.3 GB)<br>
-          <br>Образ основан на официальном MSDN Windows 11 21H2 (22000.194)<br>(Основана на старой, чтобы вы обновились сами. Сделано это для того, чтобы работали параметры реестра для того, чтобы обойти проверку.)<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!)
+          <br>Образ основан на официальном MSDN Windows 11 21H2 (22000.194)<br>(Основана на старой, чтобы вы обновились сами. Сделано это для того, чтобы работали параметры реестра для того, чтобы обойти проверку.)<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!)<br>Обязательно ставить с интернетом!
         </p>
         <a href="https://drive.google.com/file/d/1xPUE4IkpyIm3Aj01_t7jeexayneTjI2A/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 V2 21H2 by Adderly</a>
-        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-2">Как обойти проверку Windows 11</a>
+        <a href="https://www.mediafire.com/file/wpxes2p93zrs1j0/Windows+11+V2+21H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-palette-2-base u-radius-50 u-btn-2" target="_blank">Альтернативная ссылка</a>
+        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-3">Как обойти проверку Windows 11</a>
         <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 10</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 7</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 7</a>
       </div>
     </section>
-    <section class="u-clearfix u-hidden-lg u-hidden-xl u-image u-section-2" id="sec-8496" data-image-width="597" data-image-height="137">
+    <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-8496">
       <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-white u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах. </h1>
+        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах. </h1>
       </div>
     </section>
     
