--- a/Windows-Lite-x32-Сборки.html
+++ b/Windows-Lite-x32-Сборки.html
@@ -137,9 +137,9 @@
         <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows Lite</a>
       </div>
     </section>
-    <section class="u-clearfix u-hidden-lg u-hidden-xl u-image u-section-2" id="sec-616e" data-image-width="597" data-image-height="137">
+    <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-616e">
       <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-white u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
       </div>
     </section>
     
