--- a/Windows-10-сборки.html
+++ b/Windows-10-сборки.html
@@ -157,8 +157,10 @@
       </div>
     </section>
     <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-47ae">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1">К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <a href="https://drive.google.com/file/d/1xqrIeZ1BzITOFxtdxBmIS3BUKYaiiAe8/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 21H2 by Adderly</a>
+        <a href="https://drive.google.com/file/d/1KKx6f_0_EBnR0iRaWFiJcDYuFoDqBvke/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-2" target="_blank">Скачать Windows 10 1607 by Adderly</a>
       </div>
     </section>
     
