--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -160,9 +160,10 @@
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 10</a>
       </div>
     </section>
-    <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-17f1">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+    <section class="u-align-center-sm u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-17f1">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-align-center-md u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hidden-lg u-hidden-xl u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 V3.1 by Adderly</a>
       </div>
     </section>
     
