--- a/Windows-8-0-сборки.html
+++ b/Windows-8-0-сборки.html
@@ -145,8 +145,10 @@
       </div>
     </section>
     <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-5c12">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <a href="https://drive.google.com/file/d/1Z6vhjx2qBIkjqvnyAyKs1BJYzWfmdr1_/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-hidden-lg u-hidden-xl u-hover-custom-color-15 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.0 by Adderly</a>
+        <a href="https://www.mediafire.com/file/cuh34ijtc2se6iz/Windows+8.0+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-black u-radius-50 u-btn-2" target="_blank">Альтернативная ссылка</a>
       </div>
     </section>
     
