--- a/Windows-Lite-сборки.html
+++ b/Windows-Lite-сборки.html
@@ -137,9 +137,10 @@
         <a href="Windows-Lite-x32-Сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Windows Lite x32</a>
       </div>
     </section>
-    <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-b8b3">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+    <section class="u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-b8b3">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-align-center-md u-align-center-sm u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <a href="https://drive.google.com/file/d/1HAlkL0G0b92L0XEAlYZCocXKUHRMaYD0/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 10 1709 by Adderly</a>
       </div>
     </section>
     
