--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -137,11 +137,14 @@
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Сборки Windows 10</a>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
         <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 7</a>
+        <a href="https://www.mediafire.com/file/wpxes2p93zrs1j0/Windows+11+V2+21H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hidden-lg u-hidden-xl u-hover-palette-2-base u-radius-50 u-btn-7" target="_blank">Альтернативная ссылка</a>
       </div>
     </section>
-    <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-8496">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
-        <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах. </h1>
+    <section class="u-align-center-xs u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-8496">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-align-center-md u-align-center-sm u-text u-text-black u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах. </h1>
+        <a href="https://drive.google.com/file/d/1xPUE4IkpyIm3Aj01_t7jeexayneTjI2A/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hidden-lg u-hidden-xl u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 V2 21H2 by Adderly</a>
+        <a href="https://www.mediafire.com/file/wpxes2p93zrs1j0/Windows+11+V2+21H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hidden-lg u-hidden-xl u-hover-palette-2-base u-radius-50 u-btn-2" target="_blank">Альтернативная ссылка</a>
       </div>
     </section>
     
