--- a/Windows-8-1-сборки.html
+++ b/Windows-8-1-сборки.html
@@ -145,8 +145,10 @@
       </div>
     </section>
     <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-57a1">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <a href="https://drive.google.com/file/d/1Z0ruubtC0Bayk3yf_5o3uE0imnDBYiGa/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-hidden-lg u-hidden-xl u-hover-custom-color-14 u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.1 V4 by Adderly</a>
+        <a href="https://www.mediafire.com/file/0qut2q27ah8c3dn/Windows+8.1+V4+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-black u-radius-50 u-btn-2" target="_blank">Альтернативная ссылка</a>
       </div>
     </section>
     
