--- a/Windows-Lite-x32-Сборки.html
+++ b/Windows-Lite-x32-Сборки.html
@@ -138,8 +138,10 @@
       </div>
     </section>
     <section class="u-clearfix u-hidden-lg u-hidden-xl u-white u-section-2" id="sec-616e">
-      <div class="u-clearfix u-sheet u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-align-center-md u-align-center-sm u-align-center-xs u-text u-text-default-md u-text-default-sm u-text-default-xs u-text-1"> К сожалению, просмотр информации о сборках Windows не доступен на телефонах.</h1>
+        <a href="https://drive.google.com/file/d/1owQwO251ocPBcWqpA05mkpB4g39rp7Nk/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-custom-color-5 u-palette-1-base u-radius-50 u-btn-1" target="_blank">Скачать Windows 8.1 Lite by Adderly</a>
+        <a href="https://www.mediafire.com/file/0ynqo6eppqv0sxw/Windows+8.1+Lite+x32+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-hidden-lg u-hidden-xl u-hover-black u-radius-50 u-btn-2" target="_blank">Альтернативная ссылка</a>
       </div>
     </section>
     
